refactor: 合并 ColorUtil 到 MessageUtil，拆分 IslandCommand 为命令模式，抽象世界名判断到 SkyblockWorldManager